--- a/index.html
+++ b/index.html
@@ -19,11 +19,20 @@
 		<input id="tpspd_cda" type="number" value="0.5" step="0.05">
 	</div>
 	<div>
-		<h4>Nonsense plot that updates with CdA Change</h4>
 		<label for="tpspd_topspeed">Top Speed [km/h]</label>
 		<input id="tpspd_topspeed" type="number" disabled>
 	</div>
-	<div id='tpspd_plot'><!-- Plotly chart will be drawn inside this DIV --></div>
+	<div>
+		<h4>Plot that updates with Power, CdA and Mass Change</h4>
+		<p>
+			Mass doesn't change top speed for this model, only acceleration.
+		</p>
+		<div>
+			<label for="tpspd_mass">Mass [kg]</label>
+			<input id="tpspd_mass" type="number" value="200" step="5">
+		</div>
+		<div id='tpspd_plot'><!-- Plotly chart will be drawn inside this DIV --></div>
+	</div>
 	<script src="tpspd.js"></script>
 </div>
 </body>
